<resources>
    <string name="app_name">Tracer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="buy_price">Buy Price:</string>
    <string name="sell_price">Sell Price:</string>
    <string name="ask_price">Ask Price:</string>
    <string name="bought_amount">Bought Amount:</string>
    <string name="sample_buy">9700</string>
    <string name="sample_sell">10500</string>
    <string name="sample_amount">5000</string>
    <string name="sample_coinName">BTC</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">com.example.tracer</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbcom.example.tracer</string>


</resources>
